--- a/Dados/app/src/main/res/layout/activity_main.xml
+++ b/Dados/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
         android:layout_height="46dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:onClick="DevolverNumero"
         android:text="@string/buttonjugar_String"
         app:layout_constraintBottom_toBottomOf="@+id/txtNumeroUsuario"
         app:layout_constraintStart_toEndOf="@+id/txtNumeroUsuario"
