--- a/Dados/app/src/main/res/layout/activity_main.xml
+++ b/Dados/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorFondo"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/txtNumeroAleatorio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
         android:layout_marginTop="16dp"
+        android:background="@mipmap/ruleta"
+        android:gravity="center"
+        android:paddingRight="15dp"
+        android:paddingBottom="55dp"
         android:text="@string/numeroAleatorio_String"
-        android:textSize="130sp"
+        android:textAllCaps="false"
+        android:textColor="@color/colorNumero"
+        android:textIsSelectable="false"
+        android:textSize="55sp"
         app:layout_constraintEnd_toEndOf="@+id/txtCPU"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txtCPU"
@@ -39,6 +47,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
+        android:onClick="reiniciarPunto"
         android:text="@string/buttonReiniciar_String"
         android:textSize="8sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +72,7 @@
         android:id="@+id/txtNombreJugador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="80dp"
         android:text="@string/Usuario_String"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,13 +104,16 @@
 
     <Button
         android:id="@+id/btnSalir"
-        android:layout_width="120dp"
-        android:layout_height="32dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="8dp"
+        android:background="@mipmap/botonsalir"
+        android:onClick="cerrar"
+        android:paddingTop="10dp"
         android:text="@string/buttonSalir_String"
-        android:textSize="10sp"
+        android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
