--- a/Dados/app/src/main/res/values/colors.xml
+++ b/Dados/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorFondo">#1b99a7</color>
+
+    <color name="colorFondoNumero">#14130a</color>
+    <color name="colorNumero">#14130a</color>
+
+    <color name="colorFondoBotones">#98c1c2</color>
+
 </resources>
