--- a/Dados/app/src/main/res/drawable/borde_redondo_tragamonedas.xml
+++ b/Dados/app/src/main/res/drawable/borde_redondo_tragamonedas.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#f15a45"/>
+    <solid android:color="#373133"/>
 
     <stroke android:width="3dp"
-        android:color="#f15a45"/>
+        android:color="#373133"/>
 
     <padding android:left="1dp"
         android:top="1dp"
