--- a/Dados/app/src/main/res/layout/activity_main.xml
+++ b/Dados/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="300dp"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@mipmap/ruleta"
         android:gravity="center"
         android:paddingRight="15dp"
@@ -87,15 +87,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txtNumeroAleatorio" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="79dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginLeft="184dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@+id/txtCPU"
+        app:layout_constraintTop_toTopOf="@+id/txtCPU"
+        app:srcCompat="@mipmap/monedas" />
+
     <TextView
         android:id="@+id/txtCPU"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="214dp"
+        android:layout_height="35dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="100dp"
+        android:background="@drawable/borde_redondo_tragamonedas"
+        android:gravity="center"
         android:text="@string/CPU_String"
+        android:textColor="@color/colorLetraNombreugador"
         android:textSize="25sp"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -128,4 +143,5 @@
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
